@@ -25,4 +25,10 @@ Not supported are: OruxMaps and Osmdroid
 	<atlasType>NaviComputer</atlasType>
 		
 	<backgroundColor>#000000</backgroundColor>
+	
+	<!-- 
+	optional: Specify the image type: PNG JPG or GIF 
+	By default this value is detected automatically if not specified.  
+	-->
+	<!-- <tileImageType>PNG</tileImageType> -->
 </localTileSQLite>
